<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.shoestore.models.DoubleConverter"/>
        <variable
            name="shoeVariable"
            type="com.example.shoestore.viewmodel.Shoe" />

    </data>
<!--using constraint layout with guid lines make layout much comfortable to me,-->
<!--now i can put text view and edit view in any space i want,and design is soo good on screen .    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin4">


        <TextView
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:textSize="@dimen/txtSize17"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/margin2"
            android:layout_marginEnd="@dimen/margin2"
            app:layout_constraintBottom_toBottomOf="@+id/et_shoe_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_shoe_name" />

        <EditText
            android:id="@+id/et_shoe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginStart="@dimen/margin4"
            android:layout_marginEnd="@dimen/margin4"
            android:hint="@string/enter_shoe_name_hint"
            android:text="@={shoeVariable.shoeName}"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            android:autofillHints="name text" />


        <TextView
            android:id="@+id/txt_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textSize="@dimen/txtSize17"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/margin2"
            android:layout_marginEnd="@dimen/margin2"
            app:layout_constraintBottom_toBottomOf="@+id/et_company_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_company_name" />

        <EditText
            android:id="@+id/et_company_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_company_name_hint"
            android:text="@={shoeVariable.companyName}"
            android:layout_margin="@dimen/margin4"
            android:inputType="textPersonName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/et_shoe_name"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            android:autofillHints="company text" />

        <TextView
            android:id="@+id/txt_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textSize="@dimen/txtSize17"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/margin2"
            android:layout_marginEnd="@dimen/margin2"
            app:layout_constraintBottom_toBottomOf="@+id/et_shoe_size"
            app:layout_constraintEnd_toStartOf="@+id/et_shoe_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_shoe_size" />

        <EditText
            android:id="@+id/et_shoe_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:hint="@string/enter_shoe_size_hint"
            android:text="@={DoubleConverter.doubleToString(shoeVariable.shoeSize)}"
            android:inputType="numberSigned|number|textPersonName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/et_company_name"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            android:autofillHints="size" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="@dimen/txtSize17"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/margin2"
            android:layout_marginEnd="@dimen/margin2"
            app:layout_constraintBottom_toBottomOf="@+id/et_shoe_description"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_shoe_description" />

        <EditText
            android:id="@+id/et_shoe_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_shoe_description_hint"
            android:text="@={shoeVariable.shoeDescription}"
            android:layout_margin="@dimen/margin4"
            android:inputType="textPersonName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/et_shoe_size"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            android:autofillHints="description text" />

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/btn_save"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_save"
            tools:ignore="TextContrastCheck"
            style="@style/buttons" />

        <Button
            android:id="@+id/btn_save"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/et_shoe_description"
            tools:ignore="TextContrastCheck"
            style="@style/buttons"
            android:layout_marginTop="@dimen/margin50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>