<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
<!--all views are dropped in vertical , so i can use linearLayout or constraint -->
<!--    but i use constraintLayout , to put button in right by constraint in fast.-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin4">

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/sky"
            android:textSize="@dimen/txtSize40"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txt_welcome_words"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin20"
            android:text="@string/welcome_words"
            android:textSize="@dimen/txtSize20"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/btn_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_welcome" />

        <Button
            android:id="@+id/btn_welcome"
            android:text="@string/let_s_go"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck"
            style="@style/buttons"
            android:layout_marginBottom="300dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>